--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./proyects/MusicMatch/index.html">game</a>
+    Hello World
 </body>
 </html>
